--- a/index.html
+++ b/index.html
@@ -11,8 +11,15 @@
 </head>
 
 <body>
+  <!-- HEADER -->
+  <header class="rp-header">
+    <div class="container"></div>
+  </header>
+  <!-- MAIN -->
+  <main class="rp-main"></main>
+  <!-- FOOTER -->
+  <footer class="rp-footer"></footer>
 
-  <h1 class="display-5">Olá mundo!</h1>
   <script src="./js/bootstrap.bundle.min.js"></script>
   <script src="./js/main.js"></script>
 </body>
